# ks-backend

./: .gitignore  Cargo.toml  LICENSE  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20220101_000002_create_txt_table.rs
src/: lib.rs  main.rs
src/database/: db.rs  mod.rs  mutation.rs  query.rs  search.rs
src/entities/: mod.rs  prelude.rs  txt.rs  user.rs
src/web/: error.rs  login.rs  mod.rs  txt.rs  user.rs
tests/: mutation.rs  query.rs  quick_dev.rs  search.rs
