[package]
name = "ks-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["multipart"]}
axum-extra = { version = "0.9.2", features = ["typed-header"]}
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["limit", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
dotenv = "0.15.0"
jsonwebtoken = "9.2.0"
headers="0.4.0"
ring = "0.17.8"
data-encoding = "2.5.0"
tantivy = "0.21.1"
tantivy-jieba = "0.10.0"

[dev-dependencies]
anyhow="1"
httpc-test="0.1.9"
